2009-08-05  Richard Earnshaw  <rearnsha@arm.com>

	* arm.md (movdi2): Copy non-reg values to DImode registers.

2009-08-05  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/40924
	* dse.c (canon_address): Before calling cselib_expand_value_rtx
	make sure canon_rtx (mem_address) isn't simpler than
	canon_rtx (expanded_mem_address).

2009-08-03  Janis Johnson  <janis187@us.ibm.com>

	PR c/39902
	* simplify-rtx.c (simplify_binary_operation_1): Disable
	simplifications for decimal float operations.

2009-08-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40943
	* tree-ssa.c (warn_uninitialized_var): Even on LHS warn for
	operand of INDIRECT_REF.

2009-08-03  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_legitimate_constant_p): Reject CONST
	constants referencing TLS symbols.

2009-07-30  Andreas Krebbel  <krebbel1@de.ibm.com>
	
	* config/s390/s390.c (override_options): Default
	max-unrolled-insns to 100 for z10 tuning.

2009-07-30  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/constraints.md (ZQ, ZR, ZS, ZT): New constraints.
	(U, W): Constraints are now deprecated and will be removed if we
	run out of letters.	
	* config/s390/s390.md (U, W): Replaced with ZQZR, ZSZT throughout
	the file.
	("prefetch"): Add the stcmh instruction for prefetching.
	* config/s390/s390.c (s390_symref_operand_p): Function moved. No
	changes.
	(s390_short_displacement): Return always true if compiling for
	machines not providing the long displacement facility.
	(s390_mem_constraint): Support the new constraint letter Z.
	(s390_check_qrst_address): New function.

2009-07-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/40577
	* config/alpha/alpha.c (alpha_expand_unaligned_store): Convert src
	to DImode when generating insq_le insn.

2009-07-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2009-07-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (compute_zdepwi_operands): Limit deposit length to 32 - lsb.