@@ -1,3 +1,11 @@
+2009-08-05  Uros Bizjak  <ubizjak@gmail.com>
+	    Mikulas Patocka  <mikulas@artax.karlin.mff.cuni.cz>
+
+	PR target/40906
+	* gcc.target/i386/pr40906-1.c: New test.
+	* gcc.target/i386/pr40906-2.c: Ditto.
+	* gcc.target/i386/pr40906-3.c: Ditto.
+
 2009-08-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
